MYS-174 bugfix: - Tweaked transitions to function based on whether the popup should appear or not (to reflect the behaviour where a user may or may not receive the survey); - Fixed pointer-events style; - Changed star-rating-feedback--visible to visible, applicable for the component only;

--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -311,11 +311,11 @@
 .uikit-refactor .star-rating--wrapper .star-rating input:focus+label{border-bottom-style:dotted}
 .uikit-refactor .star-rating--wrapper .star-rating label.star-rating--unchecked{color:#666}
 .uikit-refactor .star-rating--wrapper .star-rating label.star-rating--checked{color:#f9c430}
-.uikit-refactor .star-rating--wrapper .star-rating-feedback{pointer-events:none;visibility:collapse;max-height:0;opacity:0;max-height:0;overflow-y:hidden;-webkit-transition:max-height .5s ease-in-out;-moz-transition:max-height .5s ease-in-out;-o-transition:max-height .5s ease-in-out;transition:max-height .5s ease-in-out}
-.uikit-refactor .star-rating--wrapper .star-rating-feedback.star-rating-feedback--visible{visibility:visible;opacity:1;max-height:500px}
 .uikit-refactor .star-rating--wrapper .star-rating-feedback label{line-height:2 !important}
 .uikit-refactor .star-rating--wrapper .star-rating-feedback label span{display:block;font-weight:bold;font-size:1.2rem}
 .uikit-refactor .star-rating--wrapper .star-rating-feedback textarea{margin-bottom:1em !important;z-index:10}
+.uikit-refactor .star-rating--wrapper,.uikit-refactor .star-rating,.uikit-refactor .star-rating-feedback,.uikit-refactor .star-rating-feedback--endstate{visibility:collapse;max-height:0;opacity:0;max-height:0;overflow-y:hidden;-webkit-transition:max-height .5s ease-in-out;-moz-transition:max-height .5s ease-in-out;-o-transition:max-height .5s ease-in-out;transition:max-height .5s ease-in-out}
+.uikit-refactor .star-rating--wrapper.visible,.uikit-refactor .star-rating.visible,.uikit-refactor .star-rating-feedback.visible,.uikit-refactor .star-rating-feedback--endstate.visible{visibility:visible;opacity:1;max-height:500px}
 #progressbar{background-color:#e2e2e2;border-radius:10px;padding:3px;margin-top:1.5em}
 #progressbar>div{background-color:#21b448;width:10%;height:15px;border-radius:10px}
 .uikit-refactor .btn-panel-Help{right:0;margin-top:10vh;padding:0;position:fixed}
