--- a/src/sass/myservice-star-rating.scss
+++ b/src/sass/myservice-star-rating.scss
@@ -63,23 +63,6 @@
   }
 
   .star-rating-feedback {
-    pointer-events: none;
-    visibility: collapse;
-  	max-height: 0; /* approximate max height */
-    opacity: 0;
-    max-height: 0;
-    overflow-y: hidden;
-    -webkit-transition: max-height 0.5s ease-in-out;
-    -moz-transition: max-height 0.5s ease-in-out;
-    -o-transition: max-height 0.5s ease-in-out;
-    transition: max-height 0.5s ease-in-out;
-
-    &.star-rating-feedback--visible {
-      visibility: visible;
-      opacity: 1;
-      max-height: 500px;
-    }
-
     label {
       line-height: 2 !important;
 
@@ -94,6 +77,29 @@
       margin-bottom: 1em !important;
       z-index:10;
     }
+  }
+}
+
+// transition animation
+.star-rating--wrapper,
+.star-rating,
+.star-rating-feedback,
+.star-rating-feedback--endstate {
+  //pointer-events: none;
+  visibility: collapse;
+  max-height: 0; /* approximate max height */
+  opacity: 0;
+  max-height: 0;
+  overflow-y: hidden;
+  -webkit-transition: max-height 0.5s ease-in-out;
+  -moz-transition: max-height 0.5s ease-in-out;
+  -o-transition: max-height 0.5s ease-in-out;
+  transition: max-height 0.5s ease-in-out;
+
+  &.visible {
+    visibility: visible;
+    opacity: 1;
+    max-height: 500px;
   }
 }
 
